# dechib

./: .gitignore  Cargo.toml  README.md
dechib/: Cargo.toml
dechib/examples/: api_example.rs  dechib_core_example.rs
dechib_api/: Cargo.toml
dechib_api/src/: api.rs  types.rs
dechib_auth/: Cargo.toml
dechib_core/: Cargo.toml
dechib_core/src/: query_engine.rs  storage_engine.rs  types.rs
src/: api.rs  lib.rs  query_engine.rs  relational_algebra.rs  storage_engine.rs  types.rs
tests/: student_database.rs
