[package]
name = "dechib_api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "dechib_api"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
tokio = {  version = "1.39.3", features = ["full"] }
anyhow = "1.0.86"
crc = "3.2.1"
dechib_core = {path = "../dechib_core"}
dechib_auth = {path = "../dechib_auth"}
